--- a/Second/src/app/blog-item/blog-item.component.html
+++ b/Second/src/app/blog-item/blog-item.component.html
@@ -6,7 +6,8 @@
         <li class="list-group-item">title:{{post.title}}</li>
         <li class="list-group-item">post:{{post.post}}</li>
         <li class="list-group-item">author:{{post.author}}</li>
-      </ul>
+      </ul>      
     </div>
   </div>
+  <ng-Content></ng-Content>
 </div>
