--- a/Third/src/app/blog/blog.component.html
+++ b/Third/src/app/blog/blog.component.html
@@ -3,6 +3,11 @@
     <p>
       Blog
     </p>
+    <label>id<input type="text" [(ngModel)]='id'></label>
+    <label>title<input type="text" [(ngModel)]='title'></label>
+    <label>author<input type="text" [(ngModel)]='author'></label>
+    <label>post<input type="text" [(ngModel)]='post'></label>
+    <button (click)="createObj()">Press me</button>      
   </div>
   <hr>
   <hr>
