--- a/Third/src/app/app.component.html
+++ b/Third/src/app/app.component.html
@@ -8,7 +8,8 @@
       <li class="nav-item"><a class="nav-link" routerLink="/blog" routerLinkActive="active" role="button" >Blog</a></li>
     </ul>
     <!-- <h1>REACT is cool</h1> -->
-    <div>{{arr.name}} temp - {{arr.main.temp -273}} {{arr.weather[0].main}}</div>
+    <!-- <div>{{arr.name}} temp - {{arr.main.temp -273}} {{arr.weather[0].main}}</div> -->
+    <button (click)='onSaveDb()'>save</button>
   </div>
 </div>
 
